///**************************************************************************
//* @Project : cdzchx_radar
//* @IDL Module: ZCHXRadar
//* @File: ZCHXRadar.proto
//* @Description:
//*    雷达asterix欧标标准格式;
//*
//* @Copyright: Copyright (c) 2014
//* @Company: 深圳置辰海信科技有限公司
//* @WebSite: http://www.szcenterstar.com/
//* @author 
//*
//* @Revision History
//*
//* <pre>
//* ----------------------------------------------------------------------
//*   Ver     Date       Who             Comments
//*  ----- ----------  --------  ---------------------------------------
//*   1.0  2015/11/23     李鹭         形成初稿
//*   2.0  2017/04/25     李鹭         去掉包结构特性，表现对象特性
//* ----------------------------------------------------------------------
//* </pre>
//**************************************************************************/
syntax = "proto2";

package com.zchxlab.radar.protobuf;

    //----------------------------------------------------------------------------------------------------------
    // Message Type  This data item allows for a more convenient handling of the messages 
    // at the receiver side by further defining the type of transaction.
    //----------------------------------------------------------------------------------------------------------
    //-|num|-------------Status Discription---------|------------中文-------------------
    // | 0 | Undefined                              |  未定义(默认)
    // | 1 | Target Report                          |  目标报告
    // | 2 | Start of Update Cycle                  |  更新周期开始
    // | 3 | Periodic Status Message                |  周期性的状态信息
    // | 4 | Event-triggered Status Message         |  事件驱动的状态信息
    //----------------------------------------------------------------------------------------------------------
    enum MSGTYP {
        MSGTYP_UNDEFINED  = 0;
        TARGET_REPORT = 1;
        START_OF_UPDATE_CYCLE  = 2;
        PERIODIC_STATUS = 3;
        EVENT_TRIGGERED_STATUS = 4;
    }


    //----------------------------------------------------------------------------------------------------------
    // Track Type  航迹状态
    //----------------------------------------------------------------------------------------------------------
    //-|num|-------------Status Discription---------|------------中文-------------------
    // | 0 | Confirmed track                        |  表示确认的航迹
    // | 1 | Track in initiation phase              |  初始状态的航迹
    // | 2 | Unknown track                          |  未知跟踪
    //----------------------------------------------------------------------------------------------------------
    enum CNF {
        CONFIRMED_TRACK  = 0;
        TENTATIVE_TRACK  = 1;
        UNKNOWN_TRACK  = 2;
    }

    //----------------------------------------------------------------------------------------------------------
    // extrapolation  外推法
    //----------------------------------------------------------------------------------------------------------
    //-|num|-------------Status Discription-----------------------------|------------中文-------------------
    // | 0 | No extrapolation                                           |  没有推算
    // | 1 | Predictable extrapolation due to sensor refresh period     |  在感知设备刷新周期中预推算
    // | 2 | Predictable extrapolation in masked area                   |  在遮挡去中预推算
    // | 3 | Extrapoltion due to unpredictable absence of detection     |  在盲区中预推算
    //----------------------------------------------------------------------------------------------------------
    enum CST {
        CST_UNDEFINED  = 0;
        PREDICTABLE_EXTRAPOLATION_DUE_PERIOD = 1;
        PREDICTABLE_EXTRAPOLATION_IN_AREA  = 2;
        EXTRAPOLATION_DUE_UNPREDICTABLE_DETECTION = 3;
    }


    //----------------------------------------------------------------------------------------------------------
    // Track Position Code  位置来历
    //----------------------------------------------------------------------------------------------------------
    //-|num|-------------Status Discription---------|------------中文-------------------
    // | 0 | Measured position                      |  测量出的位置
    // | 1 | Smoothed position                      |  平滑插值的位置
    //----------------------------------------------------------------------------------------------------------
    enum STH {
        MEASURED_POSITION  = 0;
        SMOOTHED_POSITION  = 1;
    }

    //----------------------------------------------------------------------------------------------------------
    // 雷达地面移动目标报告(cat010)
    //----------------------------------------------------------------------------------------------------------
    message TrackPoint {
    	required int32 systemAreaCode = 1;			   // 数据源唯一标识符:系统区域代码 I010/010 _sac
    	required int32 systemIdentificationCode = 2;   // 数据源唯一标识符:系统识别代码 I010/010 _sic
        required MSGTYP  messageType = 3;              // 消息类型 I010/001
    	required uint32 trackNumber = 4;		       // 航迹号 I010/161
    	required float cartesianPosX = 5;	           // 笛卡尔坐标计算X位置 I010/042
    	required float cartesianPosY = 6;			   // 笛卡尔坐标计算Y位置 I010/042
    	required double wgs84PosLat = 7;			   // WGS84坐标计算纬度 I010/041
    	required double wgs84PosLong = 8;			   // WGS84坐标计算经度 I010/041
    	required float timeOfDay = 9;			       // 当日时间，世界标准时间(UTC)表示的绝对时间戳   I010/140
    	optional CNF   trackType = 10;			       // 航迹状态: I010/170_CNF
    	optional bool  trackLastReport = 11;		   // 当前目标最后一次上报 I010/170_TRE  
    	optional CST   extrapolation = 12;			   // 外推法 I010/170_CST  
        optional STH   trackPositionCode = 13;         // 位置来历 I010/170_STH  
        optional float sigmaX = 14;                    // x轴标准差     I010/500
        optional float sigmaY = 15;                    // y轴标准差     I010/500
        optional float sigmaXY = 16;                   // 2轴平方方差     I010/500  
        optional float ampOfPriPlot = 17;              // 震荡波强度检测   I010/131
        required double cartesianTrkVel_vx = 18;       // 迪卡尔坐标航迹计算x速度(米/秒)  I010/202
        required double cartesianTrkVel_vy = 19;       // 迪卡尔坐标航迹计算y速度(米/秒)  I010/202
        required double cog = 20;                      // 方位角
        required double sog = 21;                      // 速度
    }


    //----------------------------------------------------------------------------------------------------------
    // 雷达视频 cat240
    //----------------------------------------------------------------------------------------------------------

    //------------------------------------------------------------------------------------------------
    // Bit Resolution 比特分辨率
    //------------------------------------------------------------------------------------------------
    //-|num|-------------Status Discription-------------------|------------中文-------------------
    // | 1 | Monobit Resolution Coding Length in bits: 1      |  单比特分辨率
    // | 2 | Low Resolution Coding Length in bits: 2          |  低分辨率
    // | 3 | Medium Resolution Coding Length in bits: 4       |  中分辨率
    // | 4 | High Resolution Coding Length in bits: 8         |  高分辨率
    // | 5 | Very High Resolution Coding Length in bits: 16   |  非常高分辨率
    // | 6 | Ultra High Resolution Coding Length in bits: 32  |  超高分辨率
    //------------------------------------------------------------------------------------------------
    enum RES {
        MONOBIT_RESOLUTION      = 1;
        LOW_RESOLUTION          = 2; 
        MEDIUM_RESOLUTION       = 3;
        HIGH_RESOLUTION         = 4;
        VERY_HIGH_RESOLUTION    = 5;
        ULTRA_HIGH_RESOLUTION   = 6; 
    }

    message VideoFrame  {
        required int32 systemAreaCode = 1;             // 系统区域代码 I240/010 _sac
        required int32 systemIdentificationCode = 2;   // 系统识别代码 I240/010 _sic
        required int32 msgIndex = 3;                   // 消息唯一序列号 
        required uint32 azimuth = 4;                   // 扫描方位
        optional uint32 heading = 5;                   // 航向
        required double startRange = 6;                // 扫描起始距离 
        required double rangeFactor = 7;               // 距离因子 或者 采样距离
        required RES   bitResolution  = 8;             // 视频分辨率
        required int32 timeOfDay  = 9;                 // 当日时间
        repeated int32 amplitude = 10;                 // 幅度值集合 
    }

	//----------------------------------------------------------------------------------------------------------
    // 接收雷达回波图像
    //----------------------------------------------------------------------------------------------------------
    message RadarVideoPNG {
        required uint64 radarId = 1;                    // 雷达站ID
        required string radarName = 2;                  // 雷达站名称
        required double latitude = 3;			        // 雷达站 WGS84坐标计算纬度 I010/041
    	required double longitude = 4;			        // 雷达站 WGS84坐标计算经度 I010/041
        required uint64 UTC = 5;                        // 时间标记  
        required bytes imageData  = 6;                 // 图像数据
        required uint32 width = 7;                      // 图像宽度
        required uint32 height = 8;                     // 图像高度
    }
    message RadarVideoGIF {
        required uint64 radarId = 1;                    // 雷达站ID
        required string radarName = 2;                  // 雷达站名称
        required double latitude = 3;			        // 雷达站 WGS84坐标计算纬度 I010/041
    	required double longitude = 4;			        // 雷达站 WGS84坐标计算经度 I010/041
        required uint64 startUTC = 5;                   // 开始时间标记
        required uint64 endUTC = 6;                     // 结束时间标记
        required bytes imageData  = 7;                 // 图像数据
        required uint32 width = 8;                      // 图像宽度
        required uint32 height = 9;                     // 图像高度
    }
